--- a/Roommate/Storyboard/Account.storyboard
+++ b/Roommate/Storyboard/Account.storyboard
@@ -169,7 +169,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6uW-1o-IPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="704.79999999999995" y="-562.66866566716647"/>
+            <point key="canvasLocation" x="1644" y="-562.66866566716647"/>
         </scene>
         <!--AccountVC-->
         <scene sceneID="ztj-1R-rQc">
@@ -332,43 +332,43 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TIA-fg-5kG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2858.4000000000001" y="-568.9655172413793"/>
+            <point key="canvasLocation" x="4736.8000000000002" y="-568.9655172413793"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="v07-6S-o3h">
+        <scene sceneID="VK3-WJ-hMN">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4VZ-1i-roY" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X0n-SZ-r55" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BfI-W5-cTp">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eNK-7T-mQB">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="e4X-6X-2pa" kind="relationship" relationship="rootViewController" id="NTq-5J-yHk"/>
+                        <segue destination="e4X-6X-2pa" kind="relationship" relationship="rootViewController" id="2A1-vg-LEm"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pav-uv-ydb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VQ1-7y-IIY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-234.40000000000001" y="-562.66866566716647"/>
+            <point key="canvasLocation" x="704.79999999999995" y="-562.66866566716647"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="8Vq-TX-WUe">
+        <scene sceneID="Ms1-MX-Rvx">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Nm0-bF-YZD" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BLQ-IR-Ksq" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ySu-Xr-sAg">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dJY-et-8gt">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Xl9-cE-U4v" kind="relationship" relationship="rootViewController" id="uPB-wo-1X4"/>
+                        <segue destination="Xl9-cE-U4v" kind="relationship" relationship="rootViewController" id="DIz-9I-EJ6"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5Qe-Wo-5Ug" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VrA-dt-uGa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1917.5999999999999" y="-569.86506746626696"/>
+            <point key="canvasLocation" x="3797.5999999999999" y="-568.9655172413793"/>
         </scene>
     </scenes>
     <resources>
