--- a/Roommate/Storyboard/Main.storyboard
+++ b/Roommate/Storyboard/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad10_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <viewController id="DEW-Tu-VtD" customClass="MainViewVC" customModule="Roommate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zef-1t-iqK">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="9nM-ap-Pva"/>
@@ -30,14 +30,14 @@
             <objects>
                 <viewController title="FirstLaunchVC" id="O1G-qD-1sb" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ihk-EE-TJK">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="X6y-uf-c32">
-                                <rect key="frame" x="0.0" y="20" width="834" height="1092"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U0S-cd-Ozg" customClass="RoundButton" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="286" y="428" width="262" height="36"/>
+                                <rect key="frame" x="56.5" y="428" width="262" height="36"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.68627450980000004" blue="0.65098039220000004" alpha="0.4859154929577465" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="eIG-mh-Rxi"/>
@@ -59,7 +59,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Jt-dL-clK" customClass="RoundButton" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="286" y="484" width="262" height="36"/>
+                                <rect key="frame" x="56.5" y="484" width="262" height="36"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.68627450980000004" blue="0.65098039220000004" alpha="0.48999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="262" id="OZY-kB-08r"/>
@@ -107,17 +107,17 @@
             <objects>
                 <viewController storyboardIdentifier="SignInVC" id="nAU-RN-N6A" customClass="SignInVC" customModule="Roommate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FSH-Bn-EXG">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vwc-0u-Fan">
-                                <rect key="frame" x="306" y="306" width="223" height="30"/>
+                                <rect key="frame" x="76.5" y="306" width="223" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pob-9i-Spq">
-                                <rect key="frame" x="306" y="344" width="223" height="30"/>
+                                <rect key="frame" x="76.5" y="344" width="223" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="223" id="8kJ-Ks-xtA"/>
                                 </constraints>
@@ -126,10 +126,10 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon_small" translatesAutoresizingMaskIntoConstraints="NO" id="BIO-sH-uee">
-                                <rect key="frame" x="355" y="133" width="124" height="124"/>
+                                <rect key="frame" x="125.5" y="133" width="124" height="124"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3CZ-n4-CEZ" customClass="RoundButton" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="306" y="415" width="223" height="40"/>
+                                <rect key="frame" x="76.5" y="415" width="223" height="40"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.68627450980000004" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="223" id="7o8-C4-MJK"/>
@@ -175,11 +175,11 @@
             <objects>
                 <viewController storyboardIdentifier="SignUpVC" id="ChH-2I-RTI" customClass="SignUpVC" customModule="Roommate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pEs-M8-xgP">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hNN-32-vxP">
-                                <rect key="frame" x="306" y="254" width="222" height="28"/>
+                                <rect key="frame" x="76.5" y="254" width="222" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="Av9-Hf-h1x"/>
                                     <constraint firstAttribute="width" constant="222" id="CCl-TP-5vD"/>
@@ -189,7 +189,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QgK-18-Qg1">
-                                <rect key="frame" x="306" y="307" width="222" height="28"/>
+                                <rect key="frame" x="76.5" y="307" width="222" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="222" id="kUx-kK-dFb"/>
                                 </constraints>
@@ -198,7 +198,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L8L-GI-XRE">
-                                <rect key="frame" x="306" y="360" width="222" height="28"/>
+                                <rect key="frame" x="76.5" y="360" width="222" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="222" id="f0b-GI-gaF"/>
                                 </constraints>
@@ -207,7 +207,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ysa-4U-K2t">
-                                <rect key="frame" x="306" y="413" width="222" height="28"/>
+                                <rect key="frame" x="76.5" y="413" width="222" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="222" id="c2Q-i6-KIR"/>
                                 </constraints>
@@ -216,7 +216,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tZp-Ov-d7r" customClass="CustomSegmentedControl" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="306" y="466" width="222" height="29"/>
+                                <rect key="frame" x="76.5" y="466" width="222" height="29"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="222" id="NZ9-rz-KG1"/>
@@ -233,10 +233,10 @@
                                 </userDefinedRuntimeAttributes>
                             </segmentedControl>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon_small" translatesAutoresizingMaskIntoConstraints="NO" id="QMR-en-2w2">
-                                <rect key="frame" x="355" y="105" width="124" height="124"/>
+                                <rect key="frame" x="125.5" y="105" width="124" height="124"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L5b-ED-SYp" customClass="RoundButton" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="306" y="540" width="222" height="36"/>
+                                <rect key="frame" x="76.5" y="540" width="222" height="36"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.68627450980000004" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -292,14 +292,14 @@
             <objects>
                 <viewController title="Reset PasswordVC Scene" id="SnD-RP-s9I" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sHQ-M7-pj6">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon_small" translatesAutoresizingMaskIntoConstraints="NO" id="8RX-eF-HiU">
-                                <rect key="frame" x="355" y="102" width="124" height="124"/>
+                                <rect key="frame" x="125.5" y="102" width="124" height="124"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Please enter your email address, We will send password reset instructions." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RjR-3N-eGn">
-                                <rect key="frame" x="297" y="281" width="240" height="98"/>
+                                <rect key="frame" x="67.5" y="281" width="240" height="98"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="Gud-48-KJE"/>
@@ -309,7 +309,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u1o-6m-ku1">
-                                <rect key="frame" x="312" y="393" width="210" height="30"/>
+                                <rect key="frame" x="82.5" y="393" width="210" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="2Jb-0A-aLK"/>
                                     <constraint firstAttribute="width" constant="210" id="Exl-Mm-bHZ"/>
@@ -321,7 +321,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60j-Xn-hgM" customClass="RoundButton" customModule="Roommate" customModuleProvider="target">
-                                <rect key="frame" x="312" y="456" width="210" height="30"/>
+                                <rect key="frame" x="82.5" y="456" width="210" height="30"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.68627450980000004" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="FFs-IX-4qD"/>
