[TRINHHC] Update RoomDetailForOwnerVC

--- a/Roommate/Storyboard/Main.storyboard
+++ b/Roommate/Storyboard/Main.storyboard
@@ -372,6 +372,48 @@
             </objects>
             <point key="canvasLocation" x="536.79999999999995" y="-431.33433283358323"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="QiU-fM-q2b">
+            <objects>
+                <viewController id="pIy-YZ-zLD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fgR-Ip-Akd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XEB-g9-Q7A">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4uH-mS-mNt">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="nKk-2h-yy1"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="4uH-mS-mNt" secondAttribute="bottom" id="Byp-4b-aIt"/>
+                                    <constraint firstAttribute="trailing" secondItem="4uH-mS-mNt" secondAttribute="trailing" id="NjP-LW-Ptg"/>
+                                    <constraint firstItem="4uH-mS-mNt" firstAttribute="leading" secondItem="XEB-g9-Q7A" secondAttribute="leading" id="md6-RR-B1W"/>
+                                    <constraint firstItem="4uH-mS-mNt" firstAttribute="top" secondItem="XEB-g9-Q7A" secondAttribute="top" id="rLx-K1-tkI"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AAb-qR-32h" firstAttribute="bottom" secondItem="XEB-g9-Q7A" secondAttribute="bottom" id="efU-nx-q4c"/>
+                            <constraint firstItem="XEB-g9-Q7A" firstAttribute="top" secondItem="AAb-qR-32h" secondAttribute="top" id="gCa-cZ-xi5"/>
+                            <constraint firstItem="XEB-g9-Q7A" firstAttribute="trailing" secondItem="AAb-qR-32h" secondAttribute="trailing" id="mrd-k0-5CH"/>
+                            <constraint firstItem="XEB-g9-Q7A" firstAttribute="leading" secondItem="AAb-qR-32h" secondAttribute="leading" id="wFe-If-lno"/>
+                            <constraint firstItem="4uH-mS-mNt" firstAttribute="width" secondItem="fgR-Ip-Akd" secondAttribute="width" id="ygx-H6-rgU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AAb-qR-32h"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Xw-1u-6Te" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1274" y="-440"/>
+        </scene>
     </scenes>
     <resources>
         <image name="app_icon_small" width="124" height="124"/>
