--- a/Roommate/View/Common/NewInputView.xib
+++ b/Roommate/View/Common/NewInputView.xib
@@ -18,9 +18,6 @@
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n81-12-4UQ" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="6Gb-Bi-bd8"/>
-                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -28,6 +25,7 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="n81-12-4UQ" secondAttribute="bottom" id="9pR-c0-K9r"/>
                 <constraint firstItem="n81-12-4UQ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="VQM-fM-8nY"/>
                 <constraint firstItem="n81-12-4UQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="diT-ZS-FJ0"/>
                 <constraint firstAttribute="trailing" secondItem="n81-12-4UQ" secondAttribute="trailing" id="you-6K-gm0"/>
