--- a/Roommate/View/RoomDetail/BaseInformationView.xib
+++ b/Roommate/View/RoomDetail/BaseInformationView.xib
@@ -128,6 +128,7 @@
                 <outlet property="lblArea" destination="XO3-hV-Mqk" id="38w-fJ-Ovt"/>
                 <outlet property="lblMainTitle" destination="cNq-JJ-xll" id="eeK-Hj-fmk"/>
                 <outlet property="lblStatus" destination="xkE-Vh-fM0" id="huk-OK-slg"/>
+                <outlet property="lblStatusHeightConstraint" destination="n2k-kV-Rsa" id="AF9-0J-BFU"/>
                 <outlet property="lblSubTitle" destination="JXc-Ri-otr" id="EPe-wi-RR8"/>
             </connections>
             <point key="canvasLocation" x="-76.5" y="-10"/>
