--- a/Roommate/View/Common/NavigationCVCell.xib
+++ b/Roommate/View/Common/NavigationCVCell.xib
@@ -14,45 +14,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="UtilityCVCell" customModule="Roommate" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="185" height="151"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="NavigationCVCell" customModule="Roommate" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="185" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="185" height="151"/>
+                <rect key="frame" x="0.0" y="0.0" width="185" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXQ-yL-rs1">
-                        <rect key="frame" x="0.0" y="0.0" width="185" height="151"/>
+                        <rect key="frame" x="0.0" y="0.0" width="185" height="100"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xOJ-IS-ilH">
-                                <rect key="frame" x="163" y="0.0" width="22" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="22" id="KiF-rQ-Pir"/>
-                                    <constraint firstAttribute="height" constant="22" id="WlV-Vw-dus"/>
-                                </constraints>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JV2-ID-5MO">
-                                <rect key="frame" x="46.5" y="0.0" width="92.5" height="92"/>
+                                <rect key="frame" x="62" y="10" width="61.5" height="61"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JV2-ID-5MO" secondAttribute="height" multiplier="1:1" id="d7F-mU-RZI"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDx-uy-CqQ">
-                                <rect key="frame" x="0.0" y="92" width="185" height="59"/>
+                                <rect key="frame" x="0.0" y="71" width="185" height="29"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMP-WU-x4H">
-                                        <rect key="frame" x="0.0" y="5" width="185" height="49"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lNZ-KC-jfI">
+                                        <rect key="frame" x="0.0" y="0.0" width="185" height="29"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="sMP-WU-x4H" secondAttribute="trailing" id="8gA-dM-afc"/>
-                                    <constraint firstAttribute="bottom" secondItem="sMP-WU-x4H" secondAttribute="bottom" constant="5" id="BLI-qd-sji"/>
-                                    <constraint firstItem="sMP-WU-x4H" firstAttribute="leading" secondItem="vDx-uy-CqQ" secondAttribute="leading" id="JcC-bz-0Xp"/>
-                                    <constraint firstItem="sMP-WU-x4H" firstAttribute="top" secondItem="vDx-uy-CqQ" secondAttribute="top" constant="5" id="VhL-zJ-AIZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="lNZ-KC-jfI" secondAttribute="trailing" id="CHz-Tg-MQd"/>
+                                    <constraint firstItem="lNZ-KC-jfI" firstAttribute="leading" secondItem="vDx-uy-CqQ" secondAttribute="leading" id="Pis-pD-vIP"/>
+                                    <constraint firstAttribute="bottom" secondItem="lNZ-KC-jfI" secondAttribute="bottom" id="maB-fw-NGR"/>
+                                    <constraint firstItem="lNZ-KC-jfI" firstAttribute="top" secondItem="vDx-uy-CqQ" secondAttribute="top" id="yIS-0s-FbI"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -60,13 +53,11 @@
                         <constraints>
                             <constraint firstItem="JV2-ID-5MO" firstAttribute="centerX" secondItem="vXQ-yL-rs1" secondAttribute="centerX" id="2IX-Ut-heT"/>
                             <constraint firstAttribute="bottom" secondItem="vDx-uy-CqQ" secondAttribute="bottom" id="9Gv-TB-BBV"/>
-                            <constraint firstAttribute="trailing" secondItem="xOJ-IS-ilH" secondAttribute="trailing" id="Bb9-wm-b2F"/>
                             <constraint firstItem="vDx-uy-CqQ" firstAttribute="leading" secondItem="vXQ-yL-rs1" secondAttribute="leading" id="F3Y-BU-8C3"/>
-                            <constraint firstItem="JV2-ID-5MO" firstAttribute="width" secondItem="vXQ-yL-rs1" secondAttribute="width" multiplier="1/2" id="RVl-xG-HbK"/>
+                            <constraint firstItem="JV2-ID-5MO" firstAttribute="width" secondItem="vXQ-yL-rs1" secondAttribute="width" multiplier="1/3" id="RVl-xG-HbK"/>
                             <constraint firstItem="vDx-uy-CqQ" firstAttribute="top" secondItem="JV2-ID-5MO" secondAttribute="bottom" id="tom-ZB-1sg"/>
                             <constraint firstAttribute="trailing" secondItem="vDx-uy-CqQ" secondAttribute="trailing" id="y64-fM-PpB"/>
-                            <constraint firstItem="xOJ-IS-ilH" firstAttribute="top" secondItem="vXQ-yL-rs1" secondAttribute="top" id="yNV-pd-6Jn"/>
-                            <constraint firstItem="JV2-ID-5MO" firstAttribute="top" secondItem="vXQ-yL-rs1" secondAttribute="top" id="yxd-6a-6Bd"/>
+                            <constraint firstItem="JV2-ID-5MO" firstAttribute="top" secondItem="vXQ-yL-rs1" secondAttribute="top" constant="10" id="yxd-6a-6Bd"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -78,13 +69,12 @@
                 <constraint firstAttribute="trailing" secondItem="vXQ-yL-rs1" secondAttribute="trailing" id="lYI-WN-Kka"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="185" height="151"/>
+            <size key="customSize" width="185" height="99"/>
             <connections>
                 <outlet property="imgvIcon" destination="JV2-ID-5MO" id="3ud-R7-SMc"/>
-                <outlet property="imgvSelected" destination="xOJ-IS-ilH" id="Gpy-Br-10Q"/>
-                <outlet property="lblTitle" destination="sMP-WU-x4H" id="OFN-vQ-dFs"/>
+                <outlet property="tvTitle" destination="lNZ-KC-jfI" id="DzV-Op-vEh"/>
             </connections>
-            <point key="canvasLocation" x="-250.5" y="-54.5"/>
+            <point key="canvasLocation" x="-250.5" y="-81"/>
         </collectionViewCell>
     </objects>
 </document>
