[TRINHHC] Map ui to api and fix bug

--- a/Roommate/View/Common/RoomPostCVCell.xib
+++ b/Roommate/View/Common/RoomPostCVCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2SJ-MI-AuK" customClass="NewRoomCVCell" customModule="Roommate" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2SJ-MI-AuK" customClass="RoomPostCVCell" customModule="Roommate" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="266" height="240"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
