--- a/Roommate/View/Common/InputView.xib
+++ b/Roommate/View/Common/InputView.xib
@@ -13,44 +13,28 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="InputView" customModule="Roommate" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="440" height="81"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ral-gF-21J">
-                    <rect key="frame" x="0.0" y="40" width="440" height="41"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="41" id="Bl8-L8-5GD"/>
-                    </constraints>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n81-12-4UQ" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGh-bn-yqg">
-                    <rect key="frame" x="0.0" y="0.0" width="440" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="0jx-eq-wtw"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cGh-bn-yqg" secondAttribute="trailing" id="NbV-zx-8sW"/>
-                <constraint firstItem="cGh-bn-yqg" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="OCt-ze-fUU"/>
-                <constraint firstItem="Ral-gF-21J" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="bKJ-Ib-dMb"/>
-                <constraint firstItem="Ral-gF-21J" firstAttribute="top" secondItem="cGh-bn-yqg" secondAttribute="bottom" id="hK2-BO-j4w"/>
-                <constraint firstItem="cGh-bn-yqg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kg5-2H-7dw"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ral-gF-21J" secondAttribute="trailing" id="mFk-BB-isb"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="n81-12-4UQ" secondAttribute="bottom" id="9pR-c0-K9r"/>
+                <constraint firstItem="n81-12-4UQ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="VQM-fM-8nY"/>
+                <constraint firstItem="n81-12-4UQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="diT-ZS-FJ0"/>
+                <constraint firstAttribute="trailing" secondItem="n81-12-4UQ" secondAttribute="trailing" id="you-6K-gm0"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="lblTitle" destination="cGh-bn-yqg" id="w8r-SG-wYt"/>
-                <outlet property="tfInput" destination="Ral-gF-21J" id="6PN-p7-jhN"/>
+                <outlet property="tfInput" destination="n81-12-4UQ" id="dFv-h9-Xfe"/>
             </connections>
-            <point key="canvasLocation" x="57" y="-241.5"/>
         </view>
     </objects>
 </document>
