--- a/Roommate/View/Common/VerticalCollectionView.xib
+++ b/Roommate/View/Common/VerticalCollectionView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="VerticalPostView" customModule="Roommate" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="VerticalCollectionView" customModule="Roommate" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="490" height="440"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
