--- a/Roommate/View/Common/LocationSearchView.xib
+++ b/Roommate/View/Common/LocationSearchView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,9 +17,6 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLu-Jr-Zo5">
                     <rect key="frame" x="0.0" y="0.0" width="470" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="92c-Pt-xVS"/>
-                    </constraints>
                     <connections>
                         <action selector="onClickBtnLocation:" destination="iN0-l3-epB" eventType="touchUpInside" id="pQS-tv-M2n"/>
                     </connections>
@@ -29,6 +25,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bLu-Jr-Zo5" secondAttribute="trailing" id="56v-IR-SN1"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="bLu-Jr-Zo5" secondAttribute="bottom" id="Bq5-XH-FOs"/>
                 <constraint firstItem="bLu-Jr-Zo5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Or4-MI-Vwb"/>
                 <constraint firstItem="bLu-Jr-Zo5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Q8y-ou-ahl"/>
             </constraints>
