--- a/Roommate/View/Common/UtilityCVCell.xib
+++ b/Roommate/View/Common/UtilityCVCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="NewUtilityCVCell" customModule="Roommate" customModuleProvider="target">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="UtilityCVCell" customModule="Roommate" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="470" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
